Compi2_Proyecto1/src/SubAnalisis/SubAnalisis.java
/* SubAnalisis.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. SubAnalisis.java */
package SubAnalisis;


import java.io.*;


public class SubAnalisis/*@bgen(jjtree)*/implements SubAnalisisTreeConstants, SubAnalisisConstants {/*@bgen(jjtree)*/
  protected JJTSubAnalisisState jjtree = new JJTSubAnalisisState();

  final public SimpleNode Programa() throws ParseException {/*@bgen(jjtree) PROGRAMA */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAMA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      inicio();
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
                       jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void inicio() throws ParseException {/*@bgen(jjtree) inicio */
  SimpleNode jjtn000 = new SimpleNode(JJTINICIO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      SubSentencias();
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void sentencia() throws ParseException {/*@bgen(jjtree) sentencia */
  SimpleNode jjtn000 = new SimpleNode(JJTSENTENCIA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case R_USAR:{
        Usar();
        break;
        }
      case R_CREAR:{
        crear();
        break;
        }
      case R_IMPRIMIR:{
        Imprimir();
        break;
        }
      case R_INSERTAR:{
        Insertar();
        break;
        }
      case R_ACTUALIZAR:{
        Actualizar();
        break;
        }
      case R_BORRAR:{
        Borrar();
        break;
        }
      case R_SELECCIONAR:{
        Seleccionar();
        break;
        }
      case R_OTORGAR:{
        Otorgar();
        break;
        }
      case R_DENEGAR:{
        Denegar();
        break;
        }
      case R_BACKUP:{
        back();
        break;
        }
      case R_RESTAURAR:{
        restaurar();
        break;
        }
      case R_ALTERAR:{
        Alterar();
        break;
        }
      case R_ELIMINAR:{
        Eliminar();
        break;
        }
      case R_DECLARAR:{
        Declarar();
        break;
        }
      case R_CONTAR:{
        Contar();
        break;
        }
      case ID:{
        Procedimiento();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
             jjtree.clearNodeScope(jjtn000);
             jjtc000 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte000 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte000;}
           }
           if (jjte000 instanceof ParseException) {
             {if (true) throw (ParseException)jjte000;}
           }
           {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
             jjtree.closeNodeScope(jjtn000, true);
           }
    }
  }

  final public void Usar() throws ParseException {/*@bgen(jjtree) Usar */
  SimpleNode jjtn000 = new SimpleNode(JJTUSAR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      r_usar();
      r_id();
      r_punto_coma();
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void r_usar() throws ParseException {/*@bgen(jjtree) USAR */
        SimpleNode jjtn000 = new SimpleNode(JJTUSAR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(R_USAR);
jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
jjtn000.setName(t.image);
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void r_id() throws ParseException {/*@bgen(jjtree) ID */
        SimpleNode jjtn000 = new SimpleNode(JJTID);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
jjtree.closeNodeScope(jjtn000, true);
                jjtc000 = false;
jjtn000.setName(t.image);
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void r_punto_coma() throws ParseException {/*@bgen(jjtree) PUNTO_COMA */
        SimpleNode jjtn000 = new SimpleNode(JJTPUNTO_COMA);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(PUNTO_COMA);
jjtree.closeNodeScope(jjtn000, true);
                        jjtc000 = false;
jjtn000.setName(t.image);
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void crear() throws ParseException {/*@bgen(jjtree) crear */
  SimpleNode jjtn000 = new SimpleNode(JJTCREAR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      r_crear();
      Opciones_Crear();
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void r_crear() throws ParseException {/*@bgen(jjtree) CREAR */
        SimpleNode jjtn000 = new SimpleNode(JJTCREAR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(R_CREAR);
jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
jjtn000.setName(t.image);
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Opciones_Crear() throws ParseException {/*@bgen(jjtree) Opciones_Crear */
  SimpleNode jjtn000 = new SimpleNode(JJTOPCIONES_CREAR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case R_BASE:{
        C_Base();
        break;
        }
      case R_TABLA:{
        C_Tabla();
        break;
        }
      case R_OBJETO:{
        C_Objeto();
        break;
        }
      case R_PROCEDIMIENTO:{
        C_Pro();
        break;
        }
      case R_FUNCION:{
        C_Funcion();
        break;
        }
      case R_USUARIO:{
        C_Usuario();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
             jjtree.clearNodeScope(jjtn000);
             jjtc000 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte000 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte000;}
           }
           if (jjte000 instanceof ParseException) {
             {if (true) throw (ParseException)jjte000;}
           }
           {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
             jjtree.closeNodeScope(jjtn000, true);
           }
    }
  }

  final public void C_Base() throws ParseException {/*@bgen(jjtree) C_Base */
  SimpleNode jjtn000 = new SimpleNode(JJTC_BASE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(R_BASE);
      r_id();
      r_punto_coma();
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }
